objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This is to test the Copado configuration</description>
    <fields>
        <fullName>ArticleBody__c</fullName>
        <label>Article Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
	
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>DevCopadoDemo</label>
    <pluralLabel>DevCopadoDemos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>